--- a/src/asset/style.scss
+++ b/src/asset/style.scss
@@ -64,7 +64,8 @@ body {
     padding: map_get($spacers, 5);
 
     .logo {
-      width: 500px;
+      width: 100%;
+      max-width: 500px;
     }
 
     .slogan {
@@ -82,35 +83,33 @@ body {
     }
 
     .team {
-      display: flex;
       justify-content: center;
 
       > div {
-        width: 200px;
-        position: relative;
 
         .image {
           width: 128px;
-          margin-bottom: map_get($spacers, 3);
-        }
+          position: relative;
+          margin: map_get($spacers, 3) auto;
 
-        .email {
-          top: 75px;
-          right: 30px;
-          position: absolute;
-          border: 2px solid $white;
-          background: $white;
-          padding: 0 4px;
-          @extend .rounded-circle;
+          .email {
+            top: 75px;
+            right: -8px;
+            position: absolute;
+            border: 2px solid $white;
+            background: $white;
+            padding: 0 4px;
+            @extend .rounded-circle;
 
-          &:hover {
-            transition: ease-in-out 0.2s;
-            border-color: $primary;
-          }
+            &:hover {
+              transition: ease-in-out 0.2s;
+              border-color: $primary;
+            }
 
-          img {
-            width: 18px;
-            margin-bottom: 3px;
+            img {
+              width: 18px;
+              margin-bottom: 3px;
+            }
           }
         }
       }
